--- a/templates/home.html
+++ b/templates/home.html
@@ -6,6 +6,10 @@
 
         <link rel="stylesheet" href="static/chessboardjs/css/chessboard-0.3.0.min.css" />
         <style>
+            body {
+                background-color: #17181c;
+            }
+
             #board {
                 margin: 0 auto;
                 width: 400px;
